<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/abc_control_padding_material"
    android:orientation="vertical" >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                style="@style/LabelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_type"/>
    
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
    
                <RadioButton
                    android:id="@+id/radio_type_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_1"
                    android:onClick="onRadioButtonClicked"/>
    
                <RadioButton
                    android:id="@+id/radio_type_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_2"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:id="@+id/radio_type_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_3"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:id="@+id/radio_type_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_4"
                    android:onClick="onRadioButtonClicked"/>
    
            </RadioGroup>
            <TextView
                style="@style/LabelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_id"/>
    
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
    
                <RadioButton
                    android:id="@+id/radio_id_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noti_id_1"
                    android:onClick="onRadioButtonClicked"/>
    
                <RadioButton
                    android:id="@+id/radio_id_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noti_id_2"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:id="@+id/radio_id_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noti_id_3"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:id="@+id/radio_id_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noti_id_4"
                    android:onClick="onRadioButtonClicked"/>
    
            </RadioGroup>
    
            <TextView
                style="@style/LabelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_title"/>
            <EditText
                android:id="@+id/et_push_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_title"/>
            <TextView
                style="@style/LabelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_msg"/>
            <EditText
                android:id="@+id/et_push_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:hint="@string/hint_message"/>
            <TextView
                style="@style/LabelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_summary"/>
            <EditText
                android:id="@+id/et_push_sum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:hint="@string/hint_summary"/>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/btn_noti_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:onClick="onClick"
        android:text="SEND"/>
</RelativeLayout>
